package json changes

--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node testserver.js",
+    "start": "node testserver.js"
   },
   "repository": {
     "type": "git",
